@@ -57,6 +57,7 @@ version <next>:
 - ASS subtitle encoder and decoder
 - IEC 61937 encapsulation for E-AC3 (for HDMI passthrough)
 - overlay filter added
+- rename aspect filter to setdar, and pixelaspect to setsar
 
 
 version 0.6:
